# ChangeLog for x11-themes/gtk-engines-qt
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qt/Attic/ChangeLog,v 1.7 2006/02/06 17:04:29 herbs Exp $

  06 Feb 2006; Herbie Hopkins <herbs@gentoo.org>
  gtk-engines-qt-0.6-r2.ebuild:
  Multilib fix.

  23 Jan 2006; Bryan Østergaard <kloeri@gentoo.org metadata.xml:
  Remove pkdawson from metadata, bug 57788.

  11 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gtk-engines-qt-0.6-r2.ebuild:
  Keyworded ~sparc

  07 Jan 2006; Carsten Lohrke <carlo@gentoo.org> metadata.xml:
  one maintainer gone, one left

*gtk-engines-qt-0.6-r2 (23 Oct 2005)

  23 Oct 2005; Stefan Schweizer <genstef@gentoo.org>
  +files/gtk-2.8-fix.patch, -gtk-engines-qt-0.6-r1.ebuild,
  +gtk-engines-qt-0.6-r2.ebuild:
  Add patch to fix menus with gtk-2.8, thanks to Lorenzo Villani
  <arbitermc@gmail.com> in bug 108863

  02 Aug 2005; Leonardo Boshell <leonardop@gentoo.org>
  gtk-engines-qt-0.6-r1.ebuild:
  Moved from x11-themes/gtk-qt-engine. Don't inherit from the deprecated
  gtk-engines2.eclass.

  21 Jan 2005; Simone Gotti <motaboy@gentoo.org>
  gtk-qt-engine-0.6-r1.ebuild:
  Force SLOT=2 after the call to need-kde that will reset it to 0. Fixes bug
  #78455.

*gtk-qt-engine-0.6-r1 (15 Jan 2005)

  15 Jan 2005; Simone Gotti <motaboy@gentoo.org> metadata.xml,
  +files/gtk-qt-engine-0.6-kcm-fixinstallationdir.patch,
  +gtk-qt-engine-0.6-r1.ebuild:
  Fix the installation path from /usr/kde/x.x to /usr, patch submitted to the
  author. Also add myself to the mantainers as I have more changes for this
  ebuild in the future.

  05 Jan 2005; Marcus Hanwell <cryos@gentoo.org> gtk-qt-engine-0.6.ebuild:
  Marked ~amd64, closing bug 70250.

*gtk-qt-engine-0.6 (25 Dec 2004)

  25 Dec 2004; Patrick Dawson <pkdawson@gentoo.org>
  +gtk-qt-engine-0.6.ebuild:
  Version bump.

  03 Oct 2004; Patrick Dawson <pkdawson@gentoo.org> metadata.xml,
  gtk-qt-engine-0.5.ebuild: