@@ -1,6 +1,13 @@
 # ChangeLog for x11-themes/gtk-engines-qt
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qt/Attic/ChangeLog,v 1.7 2006/02/06 17:04:29 herbs Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qt/Attic/ChangeLog,v 1.8 2006/07/05 22:34:09 genstef Exp $
+
+*gtk-engines-qt-0.6_p20060706 (05 Jul 2006)
+
+  05 Jul 2006; Stefan Schweizer <genstef@gentoo.org>
+  +gtk-engines-qt-0.6_p20060706.ebuild:
+  Version bump, new snapshot greatly simplified ebuild fixes numerous bugs I
+  cannot list because bugzilla is down.
 
   06 Feb 2006; Herbie Hopkins <herbs@gentoo.org>
   gtk-engines-qt-0.6-r2.ebuild:
